--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,23 +1,24 @@
 {% extends 'index.html' %}
 
 {% block content %}
+
     <h3>Your new recipe:</h3>
     <div>
-        <form>
+        <form method="post">
             <div>
-                <input type="text" name="name_recipe" placeholder="Name of the recipe">
+                <input required type="text" name="name_recipe" placeholder="Name of the recipe">
             </div>
             <div>
                 <label>number of servings</label>
-                <input type="number" value="1" step="1" name="number_of_serving">
+                <input min='0' type="number" value="1" step="1" name="number_of_serving">
             </div>
             <div>
                 <label>cooking time</label>
                 <div>
-                    <input type="number" value="0" step="1" name="cooking_hour"><p>hours</p>
+                    <input min='0' type="number" value="0" step="1" name="cooking_hour"><p>hours</p>
                 </div>
                 <div>
-                    <input type="number" value="0" step="1" name="cooking_minute"><p>minutes</p>
+                    <input min='1' type="number" value="0" step="1" name="cooking_minute"><p>minutes</p>
                 </div>
             </div>
             <div>
@@ -32,26 +33,62 @@
                 </div>
                 <div>
                     <label>Quantity</label>
-                    <input type="number" name="quantity_ingredient">
+                    <input min='0' type="number" name="quantity_ingredient">
                 </div>
                 <div>
                     <label>Measure unit</label>
-                    <input type="text" name="measure_unit">
+                    <select name="measure_unit">
+                        <option value="g">g</option>
+                        <option value="kg">kg</option>
+                        <option value="ml">ml</option>
+                        <option value="liter(s)">liter(s)</option>
+                        <option value="tbsp">tbsp</option>
+                        <option value="glass">glass</option>
+                        <option value="tsp">tsp</option>
+                    </select>
                 </div>
             </div>
-            <div>
+            <div class="block_to_add">
                 <h4>Step-by-step instructions</h4>
-                <div>
-                    <label>Image</label>
-                    <input type="image" name="quantity_ingredient">
-                </div>
-                <div>
-                    <label>Text</label>
-                    <input type="text" name="text">
+                <div class="step">
+                    <div>
+                        <label>Image</label>
+                        <input type="file" accept="image/*" name="image_step">
+                    </div>
+                    <div>
+                        <label>Text</label>
+                        <input type="text" name="text_step">
+                    </div>
                 </div>
             </div>
 
             <button type="submit">Send</button>
         </form>
     </div>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $(".add_step").click(function(e) {
+                    e.preventDefault();
+                    $('.block_to_add').append('                <div class="step">\n' +
+            '                    <div>\n' +
+            '                        <label>Image</label>\n' +
+            '                        <input type="file" accept="image/*" name="image_step">\n' +
+            '                    </div>\n' +
+            '                    <div>\n' +
+            '                        <label>Text</label>\n' +
+            '                        <input type="text" name="text_step">\n' +
+            '                    </div><button type="button" class="remove_button">Удалить</button>\n' +
+            '                </div>');
+                });
+
+                $('.block_to_add').on('click', '.remove_button', function (e) {
+                    e.preventDefault();
+                    $(this).parent('div').remove();
+                })
+            });
+        </script>
+
+        <button class="add_step">
+            Add step
+        </button>
 {% endblock %}
