--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
 <h4><a href="{{ url_for('main') }}">home</a></h4>
+<h4><a href="{{ url_for ('add_recipe') }}">add recipe</a></h4>
 {% if session.get('auth')%}
     <h4><a href="{{ url_for('logout') }}">logout</a></h4>
 {% else %}
