+ removed arrows in input (using css)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
 body {
     background-color: gray;
 }
+
+.input_number_of_serving::-webkit-inner-spin-button,
+.input_number_of_serving::-webkit-outer-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+}
