--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,36 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
-<h4><a href="{{ url_for('main') }}">home</a></h4>
-<h4><a href="{{ url_for ('add_recipe') }}">add recipe</a></h4>
-{% if session.get('auth')%}
-    <h4><a href="{{ url_for('logout') }}">logout</a></h4>
-{% else %}
-    <h4><a href="{{ url_for('signup') }}">signup</a></h4>
-    <h4><a href="{{ url_for('login') }}">login</a></h4>
-{% endif %}
-<p>Привет</p>
-<h1></h1>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('main') }}">Blog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Blog">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="{{ url_for('main') }}">Main page</a>
+                <a class="nav-link" href="{{ url_for ('add_recipe') }}">Add recipe</a>
+                {% if session.get('auth')%}
+                    <a class="nav-link" href="{{ url_for('logout') }}">LogOut</a>
+                {% else %}
+                    <a class="nav-link" href="{{ url_for('signup') }}">SignUp</a>
+                    <a class="nav-link" href="{{ url_for('login') }}">LogIn</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="h4 pb-2 mb-4 text-danger border-top border-dark"></div>
+
 {% block content %}
 {% endblock %}
 </body>
