--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -5,18 +5,16 @@
         <h3>Your new recipe:</h3>
     </div>
     <div class="ms-3">
-        <form enctype="text/plain" method="post">
+        <form action="{{ url_for('add_recipe') }}" method="post">
             <div>
                 <div class="col-md-4 mb-3">
                     <input required class="form-control" type="text" name="name_recipe" placeholder="Name of the recipe">
                 </div>
                 <span>number of servings</span>
-                <div class="input-group mb-3">
-                    <div>
-                        <input readonly class="input_number_of_serving form-control" min='0' type="number" value="1" step="1" name="number_of_serving">
-                        <button class="button_del_serving btn btn-outline-secondary" type="button"> - </button>
-                        <button class="button_add_serving btn btn-outline-secondary" type="button"> + </button>
-                    </div>
+                <div class="div_number_of_serving input-group mb-3 col-1">
+                    <input readonly class="input_number_of_serving form-control" min='0' type="number" value="1" step="1" name="number_of_serving">
+                    <button class="button_del_serving btn btn-outline-secondary" type="button"> - </button>
+                    <button class="button_add_serving btn btn-outline-secondary" type="button"> + </button>
                 </div>
                 <div class="row g-3">
                     <h4>cooking time</h4>
@@ -26,12 +24,33 @@
                     </div>
                     <div class="col-1">
                         <p>minutes</p>
-                        <input class="form-control" min='1' max="59" type="number" value="0" step="1" name="cooking_minute">
+                        <input class="form-control" min='0' max="59" type="number" value="0" step="1" name="cooking_minute">
                     </div>
                 </div>
                 <div class="mb-3 col-4">
                     <label>addition</label>
                     <textarea class="form-control" type="text" name="addition"></textarea>
+                </div>
+                <div class="div_type col-2 mb-3">
+                    <label>Категория блюда</label>
+                    <select id="type_recipe" class="form-control" name="type_recipe">
+                        <option value="Завтрак">Завтрак</option>
+                        <option value="Основное блюдо">Основное блюдо</option>
+                        <option value="Закуска">Закуска</option>
+                        <option value="Бульон">Бульон</option>
+                        <option value="Напиток">Напиток</option>
+                        <option value="Салат">Салат</option>
+                        <option value="Соус и маринад">Соус и маринад</option>
+                        <option value="Суп">Суп</option>
+                        <option value="Сэндвич">Сэндвич</option>
+                        <option value="Выпечка и десерты">Выпечка и десерты</option>
+                        <option value="Заготовки">Заготовки</option>
+                        <option value="Паста и пицца">Паста и пицца</option>
+                    </select>
+                </div>
+                <div>
+                    <label>Свой тип</label>
+                    <input class="inactive_checkbox" id="type_checkbox" type="checkbox">
                 </div>
             </div>
 
@@ -42,15 +61,15 @@
                 <div class="ingredient row g-3">
                     <div class="col">
                         <label>Name of the ingredient</label>
-                        <input class="input_name_ingredient form-control" type="text" name="name_ingredient[]">
+                        <input required class="input_name_ingredient form-control" type="text" name="name_ingredient[]">
                     </div>
                     <div class="col">
                         <label>Quantity</label>
-                        <input class="input_quantity_ingredient form-control" min='0' type="number" name="quantity_ingredient[]">
+                        <input disabled value="1" class="input_quantity_ingredient form-control" min='0' type="number" name="quantity_ingredient[]">
                     </div>
                     <div class="col">
                         <label>Measure unit</label>
-                        <select class="form-control" name="measure_unit[]">
+                        <select disabled class="select_measure_unit form-control" name="measure_unit[]">
                             <option value="pcs">pcs</option>
                             <option value="g">g</option>
                             <option value="kg">kg</option>
@@ -113,7 +132,10 @@
             '                    <div class="col">\n' +
             '                        <label>Text</label>\n' +
             '                        <textarea class="form-control" type="text" name="text_step[]"></textarea>\n' +
-            '                    </div><button type="button" class="remove_button">Удалить</button>\n' +
+            '                    </div>\n' +
+            '                    <div class="col-3">\n' +
+            '                        <button type="button" class="remove_button">Удалить</button>\n' +
+            '                    </div>\n' +
             '                </div>');
                 });
 
@@ -125,13 +147,13 @@
                         var j = i+1
                         $('.step_span').eq(i).text('Step ' + j)
                     }
-                })
+                });
 
                 $('.button_add_serving').click(function() {
                     var value = $('.input_number_of_serving').val();
                     value++;
                     $('.input_number_of_serving').val(value);
-                })
+                });
 
                 $('.button_del_serving').click(function() {
                     var value = $('.input_number_of_serving').val();
@@ -139,22 +161,22 @@
                         value--;
                         $('.input_number_of_serving').val(value);
                     }
-                })
+                });
 
                 $('.button_add_ingredient').click(function(e){
                     e.preventDefault();
                     $('.block_ingredient_to_add').append('<div class="ingredient row g-3">\n' +
         '                    <div class="col">\n' +
         '                        <label>Name of the ingredient</label>\n' +
-        '                        <input class="form-control" type="text" name="name_ingredient[]">\n' +
+        '                        <input class="input_name_ingredient form-control" type="text" name="name_ingredient[]">\n' +
         '                    </div>\n' +
         '                    <div class="col">\n' +
         '                        <label>Quantity</label>\n' +
-        '                        <input class="form-control" min=\'0\' type="number" name="quantity_ingredient[]">\n' +
+        '                        <input disabled class="input_quantity_ingredient form-control" value="1" min=\'0\' type="number" name="quantity_ingredient[]">\n' +
         '                    </div>\n' +
         '                    <div class="col">\n' +
         '                        <label>Measure unit</label>\n' +
-        '                        <select class="form-control" name="measure_unit[]">\n' +
+        '                        <select disabled class="select_measure_unit form-control" name="measure_unit[]">\n' +
         '                            <option value="pcs">pcs</option>\n' +
         '                            <option value="g">g</option>\n' +
         '                            <option value="kg">kg</option>\n' +
@@ -169,19 +191,32 @@
         '                </div>')
                 });
 
-                $('.block_ingredient_to_add').on('click', '.remove_button', function (e) {
-                    e.preventDefault();
-                    $(this).parent('div').remove();
-                })
-
-                $('.input_name_ingredient').on('change', function () {
-                    if ($(this).val()){
-                        $('.input_quantity_ingredient').disabled;
+                $('#type_checkbox').click(function(){
+                    if ($(this).hasClass('inactive_checkbox')){
+                    $('.div_type').append('<div>' +
+        '                   <input class="input_own_type form-control" type="text" name="own_measure_unit">' +
+        '                </div>');
+                    $('#type_recipe').attr('disabled', '');
+                    $(this).toggleClass('active_checkbox inactive_checkbox');
                     }
                     else {
-                        $('.input_quantity_ingredient').enable;
+                        $('.input_own_type').remove();
+                    $('#type_recipe').removeAttr('disabled');
+                    $(this).toggleClass('inactive_checkbox active_checkbox');
                     }
-                })
+                });
+
+                $('.block_ingredient_to_add').on('click', '.remove_button', function (e){
+                    e.preventDefault();
+                    $(this).parent('div').remove();
+                });
+
+                //$('.input_name_ingredient').on('input keyup', function(){
+                //    $('.input_quantity_ingredient').removeAttr('disabled');
+                //    $('.select_measure_unit').removeAttr('disabled');
+                //});
+
+
             });
         </script>
 
