--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="col-1">
                         <p>minutes</p>
-                        <input class="form-control" min='0' max="59" type="number" value="0" step="1" name="cooking_minute">
+                        <input class="form-control" min='1' max="59" type="number" value="0" step="1" name="cooking_minute">
                     </div>
                 </div>
                 <div class="mb-3 col-4">
@@ -65,11 +65,11 @@
                     </div>
                     <div class="col">
                         <label>Quantity</label>
-                        <input disabled value="1" class="input_quantity_ingredient form-control" min='0' type="number" name="quantity_ingredient[]">
+                        <input value="1" class="input_quantity_ingredient form-control" min='0' type="number" name="quantity_ingredient[]">
                     </div>
                     <div class="col">
                         <label>Measure unit</label>
-                        <select disabled class="select_measure_unit form-control" name="measure_unit[]">
+                        <select class="select_measure_unit form-control" name="measure_unit[]">
                             <option value="pcs">pcs</option>
                             <option value="g">g</option>
                             <option value="kg">kg</option>
@@ -168,15 +168,15 @@
                     $('.block_ingredient_to_add').append('<div class="ingredient row g-3">\n' +
         '                    <div class="col">\n' +
         '                        <label>Name of the ingredient</label>\n' +
-        '                        <input class="input_name_ingredient form-control" type="text" name="name_ingredient[]">\n' +
+        '                        <input required class="input_name_ingredient form-control" type="text" name="name_ingredient[]">\n' +
         '                    </div>\n' +
         '                    <div class="col">\n' +
         '                        <label>Quantity</label>\n' +
-        '                        <input disabled class="input_quantity_ingredient form-control" value="1" min=\'0\' type="number" name="quantity_ingredient[]">\n' +
+        '                        <input  class="input_quantity_ingredient form-control" value="1" min=\'0\' type="number" name="quantity_ingredient[]">\n' +
         '                    </div>\n' +
         '                    <div class="col">\n' +
         '                        <label>Measure unit</label>\n' +
-        '                        <select disabled class="select_measure_unit form-control" name="measure_unit[]">\n' +
+        '                        <select  class="select_measure_unit form-control" name="measure_unit[]">\n' +
         '                            <option value="pcs">pcs</option>\n' +
         '                            <option value="g">g</option>\n' +
         '                            <option value="kg">kg</option>\n' +
@@ -194,7 +194,7 @@
                 $('#type_checkbox').click(function(){
                     if ($(this).hasClass('inactive_checkbox')){
                     $('.div_type').append('<div>' +
-        '                   <input class="input_own_type form-control" type="text" name="own_measure_unit">' +
+        '                   <input required class="input_own_type form-control" type="text" name="own_type_recipe">' +
         '                </div>');
                     $('#type_recipe').attr('disabled', '');
                     $(this).toggleClass('active_checkbox inactive_checkbox');
@@ -216,6 +216,8 @@
                 //    $('.select_measure_unit').removeAttr('disabled');
                 //});
 
+
+                //СДЕЛАТЬ ПРОВЕРКУ ОДИНАКОВОГО ЧИСЛА ИНГРЕДИЕНТОВ НА JQUERY
 
             });
         </script>
