--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="{{ url_for('main') }}">Main page</a>
-                <a class="nav-link" href="{{ url_for ('add_recipe') }}">Add recipe</a>
+                <a class="nav-link active" href="{{ url_for ('add_recipe') }}">Add recipe</a>
+                <a class="nav-link active" href="{{ url_for ('profile') }}">Profile</a>
                 {% if session.get('auth')%}
-                    <a class="nav-link" href="{{ url_for('logout') }}">LogOut</a>
+                    <a class="nav-link active" href="{{ url_for('logout') }}">LogOut</a>
                 {% else %}
-                    <a class="nav-link" href="{{ url_for('signup') }}">SignUp</a>
-                    <a class="nav-link" href="{{ url_for('login') }}">LogIn</a>
+                    <a class="nav-link active" href="{{ url_for('signup') }}">SignUp</a>
+                    <a class="nav-link active" href="{{ url_for('login') }}">LogIn</a>
                 {% endif %}
             </div>
         </div>
